--- a/templates/Public/contact.html.twig
+++ b/templates/Public/contact.html.twig
@@ -1,7 +1,6 @@
 {# templates/public/home.html.twig #}{% extends 'base.html.twig' %}{% block
-title %}<h1>Accueil Web CV</h1>{% endblock %} {% block body %}
+title %}<h1>Contact Web CV</h1>{% endblock %} {% block body %}
 
-<h1>Accueil Web CV</h1>
+<h1>Contact Web CV</h1>
 <p>{{ number }}</p>
-
 {% endblock %}
