--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -6,17 +6,41 @@
     {% for flashError in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 ml-md-auto">
+              <div class="text-center">
+                <div class="card bg-light mb-3 mt-5" style="width: 800px;">
+                    <div class="card-body">
 
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-                Enter your email address and we we will send you a
-                link to reset your password.
-            </small>
-        </div>
+                        <h1>Reset your password</h1>
 
-        <button class="btn btn-primary">Send password reset email</button>
-    {{ form_end(requestForm) }}
+                        {{ form_start(requestForm) }}
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    {{ form_row(requestForm.email) }}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <div>
+                                        <small>
+                                            Enter your email address and we we will send you a
+                                            link to reset your password.
+                                        </small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <button class="btn btn-primary">Send password reset email</button>
+                                </div>
+                            </div>
+                        {{ form_end(requestForm) }}
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </div> 
 {% endblock %}
