--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -3,10 +3,30 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
-    <h1>Reset your password</h1>
+<div class="container">
+    <div class="row">
+    	<div class="col-md-10 ml-md-auto">
+        	<div class="text-center">
+            	<div class="card bg-light mb-3 mt-5" style="width: 800px;">
+                	<div class="card-body">
+    					<h1>Reset your password</h1>
 
-    {{ form_start(resetForm) }}
-        {{ form_row(resetForm.plainPassword) }}
-        <button class="btn btn-primary">Reset password</button>
-    {{ form_end(resetForm) }}
+				    	{{ form_start(resetForm) }}
+						<div class="form-group">
+                        	<div class="col-md-12">
+					   			{{ form_row(resetForm.plainPassword) }}
+					    	</div>
+						</div>
+				    	<div class="form-group">
+				        	<div class="col-md-12">
+				        		<button class="btn btn-primary">Reset password</button>
+				      		</div>
+				    	</div>
+				    	{{ form_end(resetForm) }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock %}
