--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -3,6 +3,19 @@
 {% block title %}Password Reset Email Sent{% endblock %}
 
 {% block body %}
-    <p>An email has been sent that contains a link that you can click to reset your password. This link will expire in {{ tokenLifetime|date('g') }} hour(s).</p>
-    <p>If you don't receive an email please check your spam folder or <a href="{{ path('app_forgot_password_request') }}">try again</a>.</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 ml-md-auto">
+    	    <div class="text-center">
+                <div class="card bg-light mb-3 mt-5" style="width: 800px;">
+                    <div class="card-body">
+    					<p>An email has been sent that contains a link that you can click to reset your password. This link will expire in {{ tokenLifetime|date('g') }} hour(s).</p>
+    					<p>If you don't receive an email please check your spam folder or <a href="{{ path('app_forgot_password_request') }}">try again</a>.</p>
+    				</div>
+    			</div>
+    		</div>
+    	</div>
+    </div>
+</div>
 {% endblock %}
