--- a/templates/cv/show.html.twig
+++ b/templates/cv/show.html.twig
@@ -20,6 +20,7 @@
     <a href="{{ path('cv_index') }}">back to list</a>
 
     <a href="{{ path('cv_edit', {'id': cv.id}) }}">edit</a>
+    {{ include('cv/_delete_form.html.twig') }}
 
     <h2>Infos Personnelles</h2>
 {% for infos_perso in ips %}
@@ -52,7 +53,25 @@
             
     {% endfor %}
 
+    <h2>Compétences</h2>
+    {% for skill in skills %}
+            
+                <p>{{ skill.id }}</p>
+                <p>{{ skill.name }}</p>
+                
+                    
+                    <a href="{{ path('skills_edit', {'id': skill.id,'idcv': cv.id}) }}">edit</a>
+                    <a href="{{ path('skills_new', {'idcv': cv.id}) }}">Add new</a>
+             
+            
+        {% else %}
+            <tr>
+                <td colspan="3">no records found</td>
+                <a href="{{ path('skills_new', {'idcv': cv.id}) }}">Add new</a>
+            </tr>
+        {% endfor %}
+
     
 
-    {{ include('cv/_delete_form.html.twig') }}
+    
 {% endblock %}
