--- a/templates/certificate/edit.html.twig
+++ b/templates/certificate/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('certificate/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('certificate_index') }}">back to list</a>
+     <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
 
     {{ include('certificate/_delete_form.html.twig') }}
 {% endblock %}
