--- a/templates/contact_information/edit.html.twig
+++ b/templates/contact_information/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('contact_information/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('contact_information_index') }}">back to list</a>
+     <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
 
     {{ include('contact_information/_delete_form.html.twig') }}
 {% endblock %}
