--- a/templates/cv/edit.html.twig
+++ b/templates/cv/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('cv/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('cv_index') }}">back to list</a>
+    <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
 
     {{ include('cv/_delete_form.html.twig') }}
 {% endblock %}
