--- a/templates/infos_perso/_delete_form.html.twig
+++ b/templates/infos_perso/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('infos_perso_delete', {'id': infos_perso.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('infos_perso_delete', {'id': infos_perso.id, 'idcv': cv}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ infos_perso.id) }}">
     <button class="btn">Delete</button>
