--- a/templates/infos_perso/edit.html.twig
+++ b/templates/infos_perso/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('infos_perso/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('infos_perso_index') }}">back to list</a>
+     <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
 
     {{ include('infos_perso/_delete_form.html.twig') }}
 {% endblock %}
