--- a/templates/langue/edit.html.twig
+++ b/templates/langue/edit.html.twig
@@ -7,7 +7,11 @@
 
     {{ include('langue/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('langue_index') }}">back to list</a>
-
+     <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
+    
     {{ include('langue/_delete_form.html.twig') }}
+}
+}
+}
+}
 {% endblock %}
